sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value GetNombreValeurs
val x:Int=GetNombreValeurs():Int
          ^AlgBubbleSort1:4: error: missing arguments for method print in object Predef;
follow this method with `_' if you want to treat it as a partially applied function
print x} 
^