sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
val x:Int=GetNombreValeurs():Int
print x}